# npx-compress

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  readme_developers.md  setup_cx.py
.github/workflows/: ci.yml
npxcompress/: cli.py  sglx_utils.py  utils.py
